<resources>
    <string name="app_name">BlueTalk</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_button">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="push_to_talk">Push To Talk</string>
    <string name="looking_for_proxy">Looking for Proxy</string>
    <string name="connecting">Connecting...</string>
    <string name="bluetalkie">Bluetalkie</string>
    <string name="create_username">Create Username</string>
    <string name="create_account">Create Account</string>
    <string name="username_hint">Username can also be updated in the Settings.</string>
    <string name="broadcast_sos">Broadcast SOS</string>
    <string name="loading_chat">Loading Chat...</string>
    <string name="chat_app">Chat App</string>
    <string name="no_chats_yet_start_a_conversation">No chats yet. Start a conversation!</string>
    <string name="send">Send</string>
</resources>